adjust header z-index for prevent overlappng with row

--- a/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
+++ b/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
@@ -47,7 +47,9 @@ $cell-edit-background-edit: #f3f8fe;
     .ag-body-container {
         background-color: $color2;
     }
-
+    .ag-header {
+        z-index:9999; // don't allow row contents to bleed into header
+    }
     /* prevent clipping of actions and dropdowns in 1st column */
     .ag-pinned-left-cols-viewport {
         overflow:visible;
